# devsecops-pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: security.yml
app/: Dockerfile  README.md  __init__.py  config_fake.py  db.py  requirements.txt
data/: exceptions.yaml
docs/: DECISIONS.md  EVIDENCE.md  POLICY.md  RUNBOOK.md
docs/superpowers/plans/: 2026-06-30-m1-flask-app.md
docs/superpowers/specs/: 2026-06-30-devsecops-pipeline-design.md
fixtures/clean/: checkov.sarif  gitleaks.sarif  semgrep.sarif  trivy-fs.sarif
fixtures/failing/: checkov.sarif  gitleaks.sarif  semgrep.sarif  trivy-fs.sarif  trivy-image.sarif
policy/: exceptions.rego  exceptions_test.rego  severity.rego  severity_test.rego
tests/: conftest.py  test_app.py
