[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devsecops-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

# The repo uses a flat layout with two top-level packages (app/, tests/).
# Only app/ is the installable package; tests/ is not distributed.
[tool.setuptools]
packages = ["app"]

[tool.ruff]
# Lint app/ and tests/ only; ignore infra/ (Terraform HCL, not Python)
include = ["app/**/*.py", "tests/**/*.py"]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "S",   # flake8-bandit (basic security rules)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
# S101 is handled per-file below; production code must use # noqa: S101 inline for
# intentional assertions (e.g. the security assertion in app/__init__.py).
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected and safe in tests
